Migrate Android hosts to latest KMP tooling